# basecoin-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.toml
.changelog/: config.toml  epilogue.md
.changelog/unreleased/breaking-changes/: 100-feature-minimal-gov-update-modules.md  104-refactor-app-module.md  (+8 more)
.github/workflows/: cache.yml  integration.yml  rust.yml  test.yml
basecoin/: Cargo.toml
basecoin/app/: Cargo.toml
basecoin/app/src/: builder.rs  error.rs  lib.rs  service.rs
basecoin/app/src/abci/: mod.rs
basecoin/app/src/abci/v0_37/: impls.rs  mod.rs  tower_abci.rs
basecoin/app/src/abci/v0_38/: tendermint.rs
basecoin/modules/: Cargo.toml
basecoin/modules/src/: context.rs  error.rs  lib.rs  types.rs
basecoin/modules/src/auth/: account.rs  impls.rs  mod.rs  service.rs
basecoin/modules/src/bank/: context.rs  error.rs  impls.rs  mod.rs  service.rs  util.rs
basecoin/modules/src/gov/: error.rs  impls.rs  mod.rs  msg.rs  proposal.rs  recover.rs  service.rs  tx.rs
basecoin/modules/src/ibc/: client_contexts.rs  client_state.rs  error.rs  impls.rs  mod.rs  router.rs  transfer.rs
basecoin/modules/src/staking/: impls.rs  service.rs
basecoin/modules/src/upgrade/: impls.rs  mod.rs  query.rs  service.rs
basecoin/src/: config.rs  helper.rs  lib.rs  runner.rs
basecoin/src/cli/: command.rs
basecoin/src/tx/: key_pair.rs  mod.rs
basecoin/store/: Cargo.toml
basecoin/store/src/: context.rs
basecoin/store/src/avl/: mod.rs  node.rs  proof.rs  tests.rs  tree.rs
basecoin/store/src/impls/: growing.rs  in_memory.rs  revertible.rs  shared.rs
basecoin/store/src/types/: height.rs  identifier.rs  mod.rs  path.rs  store.rs
basecoin/store/src/utils/: codec.rs  mod.rs
ci/: Dockerfile  Makefile  README.md  entrypoint.sh  hermes-config-recovery.toml  hermes-config.toml  one-chain  one-chain.sh  user_seed.json
ci/cometbft-config/: config.toml  genesis.json  priv_validator_key.json
ci/tendermint-config/: config.toml  genesis.json  node_key.json
ci/tests/: Makefile  create-channel.sh  create-connection.sh  grpc-service.sh  recover-client.sh  token-transfer.sh  update-channel.sh  upgrade-client.sh
crates/app/: Cargo.toml
crates/app/src/: builder.rs  lib.rs  runner.rs  service.rs
crates/app/src/abci/v0_37/: impls.rs  tower_abci.rs
crates/app/src/abci/v0_38/: tendermint.rs
crates/app/src/modules/: context.rs  mod.rs  types.rs
crates/app/src/modules/auth/: account.rs  context.rs  impls.rs  mod.rs  service.rs
crates/app/src/modules/bank/: context.rs  error.rs  impls.rs  mod.rs  service.rs  util.rs
crates/app/src/modules/gov/: error.rs  impls.rs  mod.rs  msg.rs  path.rs  proposal.rs  service.rs
crates/app/src/modules/ibc/: client_contexts.rs  error.rs  impls.rs  mod.rs  router.rs  service.rs  transfer.rs
crates/app/src/modules/staking/: impls.rs  mod.rs  service.rs
crates/app/src/modules/upgrade/: impls.rs  mod.rs  path.rs  query.rs  service.rs
crates/app/src/types/: config.rs  error.rs  mod.rs  query.rs
crates/app/src/utils/: macros.rs
crates/basecoin/: Cargo.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/helper/: Cargo.toml
crates/helper/src/: adapts.rs  error.rs  lib.rs  macros.rs
crates/modules/: Cargo.toml
crates/modules/auth/: Cargo.toml
crates/modules/auth/src/: account.rs  error.rs  impls.rs  lib.rs  service.rs
crates/modules/bank/: Cargo.toml
crates/modules/bank/bank-type/: Cargo.toml
crates/modules/bank/bank-type/src/: lib.rs
crates/modules/bank/src/: context.rs  error.rs  impls.rs  lib.rs  service.rs
crates/modules/gov/: Cargo.toml
crates/modules/gov/src/: error.rs  impls.rs  msg.rs  path.rs  proposal.rs  service.rs
crates/modules/ibc/: Cargo.toml
crates/modules/ibc/src/: error.rs  impls.rs  lib.rs  router.rs  service.rs  transfer.rs
crates/modules/module-api/: Cargo.toml
crates/modules/module-api/src/: error.rs  lib.rs  module.rs  types.rs
crates/modules/src/: context.rs  lib.rs
crates/modules/src/auth/: impls.rs
crates/modules/src/bank/: error.rs  impls.rs  util.rs
crates/modules/src/gov/: error.rs  impls.rs  msg.rs
crates/modules/src/ibc/: error.rs  impls.rs
crates/modules/src/types/: config.rs  mod.rs
crates/modules/src/upgrade/: impls.rs  query.rs  service.rs
crates/modules/staking/: Cargo.toml
crates/modules/staking/src/: impls.rs  service.rs
crates/modules/upgrade/: Cargo.toml
crates/modules/upgrade/src/: error.rs  impls.rs  lib.rs  path.rs  query.rs  service.rs
crates/store/: Cargo.toml
crates/store/src/: context.rs  impls.rs  lib.rs  memory.rs  types.rs
crates/store/src/avl/: node.rs  proof.rs  tests.rs  tree.rs
crates/store/src/impls/: growing.rs  in_memory.rs  mod.rs  revertible.rs
crates/store/src/types/: path.rs  store.rs
crates/store/src/utils/: codec.rs  macros.rs
docs/modules/: bank.md  ibc.md
src/: app.rs  application.rs  base64.rs  config.rs  encoding.rs  error.rs  lib.rs  main.rs  prostgen.rs  result.rs  sync.rs  tx.rs
src/app/: builder.rs  command.rs  driver.rs  handle.rs  mod.rs  modules.rs  response.rs  responses.rs  runner.rs  service.rs  state.rs  store.rs  tx.rs
src/application/: abci.rs  mod.rs  response.rs
src/cli/: command.rs  option.rs
src/helper/: adapts.rs  error.rs  macros.rs
src/modules/: auth.rs  bank.rs  ibc.rs  mod.rs  module.rs  staking.rs  traits.rs  types.rs
src/prostgen/: COSMOS_IBC_COMMIT  COSMOS_SDK_COMMIT  cosmos.auth.v1beta1.rs  cosmos.bank.v1beta1.rs  cosmos.base.reflection.v1beta1.rs  cosmos.base.reflection.v2alpha1.rs  cosmos.base.tendermint.v1beta1.rs  cosmos.gov.v1beta1.rs  cosmos.staking.v1beta1.rs  cosmos.tx.v1beta1.rs  cosmos.upgrade.v1beta1.rs  ibc.applications.interchain_accounts.controller.v1.rs  ibc.applications.interchain_accounts.host.v1.rs  ibc.applications.interchain_accounts.v1.rs  ibc.applications.transfer.v1.rs  ibc.core.channel.v1.rs  ibc.core.client.v1.rs  ibc.core.connection.v1.rs  ibc.core.port.v1.rs  mod.rs  tendermint.abci.rs
src/store/: codec.rs  context.rs  impls.rs  memory.rs  mod.rs  revertible.rs  shared.rs  types.rs
tests/fixtures/: tx.json
(+80 files in other folders)
