[workspace]

resolver = "2"

members = [ "basecoin", "basecoin/app", "basecoin/modules", "basecoin/store" ]

[workspace.package]
version      = "0.2.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.64"
readme       = "README.md"
repository   = "https://github.com/informalsystems/basecoin-rs"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
base64             = { version = "0.22.1", default-features = false, features = [ "alloc" ] }
cosmrs             = { version = "0.18.0" }
displaydoc         = { version = "0.2", default-features = false }
derive_more        = { version = "0.99.18", default-features = false, features = [ "from", "into", "display" ] }
ed25519            = { version = "2.2.3", default-features = false }
prost              = { version = "0.13.1", default-features = false }
serde              = "1.0"
serde_json         = "1.0"
sha2               = "0.10.8"
tonic              = "0.12.1"
tonic-reflection   = "0.12.1"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"

# ibc dependencies
ibc       = { version = "0.54.0", default-features = false, features = [ "serde" ] }
ibc-query = { version = "0.54.0", default-features = false }
ibc-proto = { version = "0.47.0", default-features = false }
ics23     = { version = "0.12", default-features = false }

# tendermint dependencies
tendermint       = { version = "0.38", default-features = false }
tendermint-abci  = { version = "0.38", default-features = false }
tendermint-proto = { version = "0.38", default-features = false }
tendermint-rpc   = { version = "0.38", default-features = false }

# tower abci
tower-abci = { version = "0.16" }

[patch.crates-io]
ibc       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "cfb707e" }
ibc-query = { git = "https://github.com/cosmos/ibc-rs.git", rev = "cfb707e" }

# for tendermint 0.38
tower-abci = { git = "https://github.com/informalsystems/tower-abci", rev = "0992541" }
