[workspace]

resolver = "2"

members = [ "basecoin", "basecoin/app", "basecoin/modules", "basecoin/store" ]

[workspace.package]
version      = "0.2.0"
license      = "Apache-2.0"
edition      = "2021"
rust-version = "1.75"
readme       = "README.md"
repository   = "https://github.com/informalsystems/basecoin-rs"
authors      = [ "Informal Systems <hello@informal.systems>" ]

[workspace.dependencies]
# external dependencies
base64             = { version = "0.22.1", default-features = false, features = [ "alloc" ] }
cosmrs             = { version = "0.20.0" }
displaydoc         = { version = "0.2", default-features = false }
derive_more        = { version = "1.0.0", default-features = false, features = [ "from", "into", "try_into", "display" ] }
ed25519            = { version = "2.2.3", default-features = false }
prost              = { version = "0.13.3", default-features = false }
serde_derive       = { version = "1.0", default-features = false }
serde              = "1.0"
serde_json         = "1.0"
sha2               = "0.10.8"
tonic              = "0.12.2"
tonic-reflection   = "0.12.2"
tracing            = "0.1.40"
tracing-subscriber = "0.3.18"

# ibc dependencies
ibc       = { version = "0.55", default-features = false, features = [ "serde" ] }
ibc-query = { version = "0.55", default-features = false }
ibc-proto = { version = "0.51.1", default-features = false, features = [ "transport" ] }
ics23     = { version = "0.12", default-features = false }

# tendermint dependencies
tendermint       = { version = "0.40", default-features = false }
tendermint-abci  = { version = "0.40", default-features = false }
tendermint-proto = { version = "0.40", default-features = false }
tendermint-rpc   = { version = "0.40", default-features = false }

# tower abci
tower-abci = { version = "0.15" }

[patch.crates-io]
ibc       = { git = "https://github.com/cosmos/ibc-rs.git", rev = "81625d6" }
ibc-query = { git = "https://github.com/cosmos/ibc-rs.git", rev = "81625d6" }

# for tendermint 0.38
tower-abci = { git = "https://github.com/informalsystems/tower-abci", branch = "rano/tendermint/0.40" }
