[package]
name = "basecoin"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
description = """
    Contains the basecoin daemon and CLI that integrates with ibc-rs, making
    use of tendermint-rs.
"""

[features]
default = ["v0_37"]
v0_37 = ["basecoin-app/v0_37", "dep:tower-abci"]
v0_38 = ["basecoin-app/v0_38", "dep:tendermint-abci"]

[dependencies]
# external dependencies
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
ibc-proto = { workspace = true, features = [
    "server",
    "proto-descriptor",
    "serde",
] }
serde = { workspace = true }
serde_derive = { version = "1.0.104", default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
toml = { version = "0.8" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-abci = { version = "0.11", optional = true }

# ibc dependencies
ibc = { workspace = true }

# tendermint dependencies
tendermint-abci = { workspace = true, optional = true }
tendermint-rpc = { workspace = true, features = ["http-client"] }

# internal dependencies
basecoin-store = { path = "./store" }
basecoin-modules = { path = "./modules" }
basecoin-app = { path = "./app", default-features = false }
