[package]
name        = "basecoin"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = "Contains the basecoin daemon and CLI that integrates with ibc-rs, making use of tendermint-rs."

[features]
default = [ "v0_37" ]
v0_37   = [ "basecoin-app/v0_37", "dep:tower-abci" ]
v0_38   = [ "basecoin-app/v0_38", "dep:tendermint-abci" ]

[dependencies]
# external dependencies
bech32             = { version = "0.11.0" }
tiny-bip39         = { version = "1" }
digest             = { version = "0.10.7" }
bitcoin            = { version = "0.32.2" }
hdpath             = { version = "0.6.3" }
clap               = { version = "4.5", features = [ "derive", "wrap_help" ] }
prost              = { workspace = true }
serde              = { workspace = true }
serde_derive       = { workspace = true }
serde_json         = { workspace = true }
secp256k1          = { version = "0.29", features = [ "serde", "rand-std" ] }
sha2               = { workspace = true }
tokio              = { version = "1.40", features = [ "macros", "rt-multi-thread" ] }
tonic              = { workspace = true }
tonic-reflection   = { workspace = true }
toml               = { version = "0.8" }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# ibc dependencies
ibc       = { workspace = true }
ibc-proto = { workspace = true, features = [ "server", "proto-descriptor", "serde" ] }

# tendermint dependencies
tendermint-abci = { workspace = true, optional = true }
tendermint-rpc  = { workspace = true, features = [ "http-client" ] }

# tower abci
tower-abci = { workspace = true, optional = true }

# internal dependencies
basecoin-store   = { path = "./store" }
basecoin-modules = { path = "./modules" }
basecoin-app     = { path = "./app", default-features = false }
