[package]
name = "basecoin-app"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies"]
repository = "https://github.com/informalsystems/basecoin-rs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    An example Tendermint ABCI application that integrates with ibc-rs, making
    use of tendermint-rs.
"""

default-run = "basecoin"


[features]
default = ["v0_37"]

# Makes the application compatible with CometBFT v0.37
v0_37 = ["dep:tower-abci", "dep:tower"] 

# Makes the application compatible with CometBFT v0.38
# (WIP) methods are not yet implemented
v0_38 = ["dep:tendermint-abci"]

[dependencies]
basecoin-store = { path = "../store" }
base64 = { workspace = true }
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
cosmrs = "0.14.0"
displaydoc = { workspace = true }
derive_more = { workspace = true }
ibc = { workspace = true }
ibc-proto = { workspace = true, features = ["server", "proto-descriptor", "serde"] }
ics23 = { workspace = true, features = ["host-functions"] }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { version = "1.0.104", default-features = false }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
tendermint-abci = { workspace = true, optional = true }
tendermint-proto ={ workspace = true }
tendermint-rpc = { workspace = true , features = ["http-client"] }
toml = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.9"
tonic-reflection = "0.9"
tracing = { workspace = true }
tracing-subscriber = "0.3.16"
tower-abci = { version = "0.9", optional = true }
tower = { version = "0.4", features = ["full"], optional = true }

