[package]
name = "cosmos-sdk-rs-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_derive = { version = "1", default-features = false }
tendermint-rpc = {version = "0.32.0", features = ["http-client"] }
tracing-subscriber = "0.3.16"
toml = "0.7"
anyhow = "1.0.71"
