[package]
name = "cosmos-sdk-rs-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
displaydoc = { version = "0.2", default-features = false }
ibc = { git = "https://github.com/cosmos/ibc-rs.git", rev = "4b540bc"}
tendermint-proto = "=0.32.0"

[dev-dependencies]
bytes = "1.0.1"
lazy_static = "1.4.0"
proptest = "*"
rand = "*"