[package]
name = "basecoin-modules"
version     = { workspace = true }
edition     = { workspace = true }
license     = { workspace = true }
readme      = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = """
        A simple implementation of various IBC modules for the basecoin application.
"""

[dependencies]
# external dependencies
base64             = { workspace = true }
cosmrs             = "0.15.0"
displaydoc         = { workspace = true }
derive_more        = { workspace = true }
primitive-types    = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
prost              = { workspace = true }
serde              = { workspace = true }
serde_derive       = { version = "1.0.104", default-features = false }
serde_json         = { workspace = true }
sha2               = { workspace = true }
toml               = "0.8"
tokio              = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic              = "0.10"
tracing            = { workspace = true }
tracing-subscriber = "0.3.16"

# ibc dependencies
ibc                = { workspace = true }
ibc-proto          = { workspace = true, features = ["server", "proto-descriptor", "serde"] }
ibc-query          = { workspace = true }
ics23              = { workspace = true, features = ["host-functions"] }

# tendermint dependencies
tendermint         = { workspace = true }
tendermint-abci    = { workspace = true, optional = true }
tendermint-proto   = { workspace = true }
tendermint-rpc     = { workspace = true , features = ["http-client"] }

# internal dependencies
basecoin-store     = { path = "../store" }


