[package]
name = "basecoin-store"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
categories = ["cryptography::cryptocurrencies", "iavl"]
repository = "https://github.com/informalsystems/basecoin-rs"
authors = ["Informal Systems <hello@informal.systems>"]
description = """
    A simple implementation of an AVL store tailored for the basecoin application.
"""

[dependencies]
base64 = { workspace = true }
displaydoc = { workspace = true }
derive_more = { workspace = true }
ed25519 = { workspace = true }
ibc = { workspace = true }
ics23 = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tendermint = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
bytes = "1.0.1"
lazy_static = "1.4.0"
proptest = "*"
rand = "*"
