[package]
name = "cosmos-sdk-rs-staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibc-proto = { version = "=0.31.0", default-features = false, features = ["server"] }
tonic = "0.9"
tracing = "0.1.26"

cosmos-sdk-rs-store = { version = "0.1", path = "../../store" }
