[package]
name = "cosmos-sdk-rs-upgrade"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = "0.14.0"
derive_more = { version = "0.99.17", default-features = false, features = ["from", "into", "display"] }
ibc = { git = "https://github.com/cosmos/ibc-rs.git", rev = "4b540bc"}
ibc-proto = { version = "=0.31.0", default-features = false, features = ["server"] }
prost = { version = "0.11.6", default-features = false }
serde_json = "1.0"
displaydoc = { version = "0.2", default-features = false }
primitive-types = { version = "0.12.0", default-features = false, features = ["serde_no_std"] }
tendermint = "=0.32.0"
tendermint-proto = "=0.32.0"
tendermint-rpc = {version = "0.32.0", features = ["http-client"] }
tonic = "0.9"
anyhow = "1.0.71"
tracing = "0.1.26"

cosmos-sdk-rs-store = { version = "0.1", path = "../../store" }
cosmos-sdk-rs-helper = { version = "0.1", path = "../../helper" }
cosmos-sdk-rs-module-api = { version = "0.1", path = "../module-api" }
# bank-type = { version = "0.1", path = "./bank-type" }
cosmos-sdk-rs-auth = { version = "0.1", path = "../auth" }
cosmos-sdk-rs-config = { version = "0.1", path = "../../config" }